2022.1/fetching_ip/fetching_ip/solution1/csim/build/apcc.log
INFO: [HLS 200-10] Running '/home/bernard/Vitis/Vivado/2020.1/bin/unwrapped/lnx64.o/apcc'
INFO: [HLS 200-10] For user 'bernard' on host 'bernard-Precision-5530' (Linux_x86_64 version 4.15.0-132-generic) on Wed Feb 03 17:59:23 CET 2021
INFO: [HLS 200-10] On os Ubuntu 16.04.7 LTS
INFO: [HLS 200-10] In directory '/home/bernard/Vitis/Vitis/2020.1/hls_riscv_cpu_ip/fetching_ip/fetching_ip/solution1/csim/build'
In file included from ../../../../testbench_fetching_ip.c:2:
In file included from ../../../../fetching_ip.h:4:
In file included from /home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_int.h:54:
In file included from /home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_common.h:57:
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:93:2: error: "AP data type can only be used in C++"
#error "AP data type can only be used in C++"
 ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:179:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:179:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:182:1: error: unknown type name 'template'
template <int _AP_W>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:182:10: error: expected identifier or '('
template <int _AP_W>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:185:1: error: unknown type name 'template'
template <int _AP_W>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:185:10: error: expected identifier or '('
template <int _AP_W>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:188:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:188:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:191:1: error: unknown type name 'template'
template <int _AP_W, bool _AP_S>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:191:10: error: expected identifier or '('
template <int _AP_W, bool _AP_S>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:194:1: error: unknown type name 'template'
template <int _AP_W1, typename _AP_T1, int _AP_W2, typename _AP_T2>
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:194:10: error: expected identifier or '('
template <int _AP_W1, typename _AP_T1, int _AP_W2, typename _AP_T2>
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:197:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, bool _AP_S = true, ap_q_mode _AP_Q = AP_TRN,
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:197:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, bool _AP_S = true, ap_q_mode _AP_Q = AP_TRN,
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:201:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:201:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
         ^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:205:1: error: unknown type name 'template'
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
^
/home/bernard/Vitis/Vivado/2020.1/common/technology/autopilot/ap_decl.h:205:10: error: expected identifier or '('
template <int _AP_W, int _AP_I, ap_q_mode _AP_Q = AP_TRN,
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
ERROR: [APCC 202-10] clang compile failed: child process exited abnormally
ERROR: [APCC 202-1] ProcessSources failed
INFO: [APCC 202-3] Tmp directory is /tmp/apcc_db_bernard/307201612371563683281
ERROR: [APCC 202-1] APCC failed.
